--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -7,6 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/meteo-stations">Stations</a>
       <a mat-list-item routerLink="/sensors">Sensors</a>
+      <a mat-list-item (click)="logout()">Log out</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
