--- a/src/app/modules/welcome/welcome.component.html
+++ b/src/app/modules/welcome/welcome.component.html
@@ -1,1 +1,11 @@
-<p>welcome works!</p>
+<mat-toolbar >
+  <button
+    mat-raised-button
+    color="primary"
+    type="button"
+    (click)="login()"
+  >Login</button>
+
+</mat-toolbar>
+
+
