--- a/src/app/modules/meteo-stations/pages/meteo-stations/meteo-stations.component.html
+++ b/src/app/modules/meteo-stations/pages/meteo-stations/meteo-stations.component.html
@@ -23,7 +23,7 @@
   <mat-accordion>
     <mat-expansion-panel
       hideToggle
-      *ngFor="let meteoStation of meteoStations | async"
+      *ngFor="let meteoStation of meteoStations$ | async"
     >
       <mat-expansion-panel-header>
         <mat-panel-title>
