--- a/src/app/modules/sensors/components/sensors-list/sensors-list.component.html
+++ b/src/app/modules/sensors/components/sensors-list/sensors-list.component.html
@@ -25,17 +25,20 @@
     </td>
   </ng-container>
   <ng-container matColumnDef="stationId">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>stationId</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Station</th>
     <td mat-cell *matCellDef="let sensor">
-      {{ sensor.stationId | getSensorName: (sensors$ | async)}}
+      {{ sensor.stationId | getStationName: (stations$ | async)}}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="review">
-    <th mat-header-cell *matHeaderCellDef>Review</th>
+    <th mat-header-cell *matHeaderCellDef><!-- Review --></th>
     <td mat-cell *matCellDef="let sensor">
       <button mat-button color="primary" (click)="viewSensorDetails(sensor)">
         <mat-icon>article</mat-icon>
+      </button>
+      <button mat-button color="warn" (click)="deleteSensor(sensor)">
+        <mat-icon>delete</mat-icon>
       </button>
     </td>
   </ng-container>
