--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -7,8 +7,9 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/meteo-stations">Stations</a>
       <a mat-list-item routerLink="/sensors">Sensors</a>
-      <a mat-list-item (click)="logout()">Log out</a>
-    </mat-nav-list>
+      <a mat-list-item routerLink="/readings">Readings</a>
+<!--       <a mat-list-item (click)="logout()">Log out</a>
+ -->    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
@@ -21,6 +22,22 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>ngMeteo</span>
+        <button
+          style="margin-left: auto"
+          color="basic"
+          mat-mini-fab
+          [matMenuTriggerFor]="menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <!-- <button mat-menu-item (click)="viewProfile(user.id)">
+            <mat-icon>person</mat-icon><span>View profile</span>
+          </button> -->
+          <button mat-menu-item (click)="logout()">
+            <mat-icon>exit_to_app</mat-icon><span>Log out</span>
+          </button>
+        </mat-menu>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
