--- a/src/app/modules/sensors/components/sensors-list/sensors-list.component.html
+++ b/src/app/modules/sensors/components/sensors-list/sensors-list.component.html
@@ -34,8 +34,11 @@
   <ng-container matColumnDef="review">
     <th mat-header-cell *matHeaderCellDef><!-- Review --></th>
     <td mat-cell *matCellDef="let sensor">
-      <button mat-button color="primary" (click)="viewSensorDetails(sensor)">
+      <button mat-button color="primary" (click)="viewReadings(sensor)">
         <mat-icon>article</mat-icon>
+      </button>
+      <button mat-button color="primary" (click)="viewSensorDetails(sensor)">
+        <mat-icon>edit</mat-icon>
       </button>
       <button mat-button color="warn" (click)="deleteSensor(sensor)">
         <mat-icon>delete</mat-icon>
