--- a/src/app/modules/sensors/pages/sensors/sensors.component.html
+++ b/src/app/modules/sensors/pages/sensors/sensors.component.html
@@ -3,6 +3,7 @@
   <h1>Sensors</h1>
   <div style="margin-left: auto">
     <button
+      id="newBtn"
       style="margin-right: 20px; margin-top: 5px; margin-bottom: 5px"
       (click)="onNew()"
       color="accent"
