--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/meteo-stations">Stations</a>
-      <a mat-list-item routerLink="/sensors">Sensors</a>
-      <a mat-list-item routerLink="/readings">Readings</a>
+      <a id="linkToStation" mat-list-item routerLink="/meteo-stations">Stations</a>
+      <a id="linkToSensors" mat-list-item routerLink="/sensors">Sensors</a>
+      <a id="linkToReadings" mat-list-item routerLink="/readings">Readings</a>
 <!--       <a mat-list-item (click)="logout()">Log out</a>
  -->    </mat-nav-list>
   </mat-sidenav>
@@ -23,6 +23,7 @@
       </button>
       <span>ngMeteo</span>
         <button
+          id="moreOptionsBtn"
           style="margin-left: auto"
           color="basic"
           mat-mini-fab
