--- a/src/app/modules/readings/pages/readings/readings.component.html
+++ b/src/app/modules/readings/pages/readings/readings.component.html
@@ -2,6 +2,7 @@
   <h1>Readings</h1>
   <div style="margin-left: auto">
     <button
+      id="newBtn"
       style="margin-right: 20px; margin-top: 5px; margin-bottom: 5px"
       (click)="onNew()"
       color="accent"
