--- a/src/app/modules/sensors/components/edit-sensor-modal/edit-sensor-modal.component.html
+++ b/src/app/modules/sensors/components/edit-sensor-modal/edit-sensor-modal.component.html
@@ -65,7 +65,7 @@
     mat-raised-button
     (click)="updateSensor()"
     color="primary"
-    [disabled]="loading"
+    [disabled]="sensorForm.invalid || loading"
   >
     Update sensor type
   </button>
@@ -74,7 +74,7 @@
     mat-raised-button
     (click)="newSensor()"
     color="primary"
-    [disabled]="loading"
+    [disabled]="sensorForm.invalid || loading"
   >
     Create new sensor
   </button>
