--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   display: flex;
   flex-direction: column;
 }
+
+
+.custom-dialog-container .mat-dialog-container {
+  padding: 0px !important;
+}
