--- a/src/app/modules/welcome/components/view-station/view-station.component.html
+++ b/src/app/modules/welcome/components/view-station/view-station.component.html
@@ -5,15 +5,13 @@
     <mat-card-subtitle>{{data.description}}</mat-card-subtitle>
   </mat-card-header>
   <img style="max-height: 500px;" mat-card-image [src]="data.imageUrl" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
+  <mat-card-content *ngIf="readings$ | async as readings">
+    <p *ngFor="let sensor of sensors$ | async">
+      {{sensor.description}}:{{readings | getLatestReadingForSensor: sensor.id}}
     </p>
   </mat-card-content>
-  <mat-card-actions>
+  <!-- <mat-card-actions>
     <button mat-button>LIKE</button>
     <button mat-button>SHARE</button>
-  </mat-card-actions>
+  </mat-card-actions> -->
 </mat-card>
