--- a/src/app/modules/meteo-stations/components/edit-meteo-station-modal/edit-meteo-station-modal.component.html
+++ b/src/app/modules/meteo-stations/components/edit-meteo-station-modal/edit-meteo-station-modal.component.html
@@ -1,94 +1,92 @@
+<h1>Meteo station</h1>
+<form [formGroup]="meteoStationForm" class="flex-column" style="width: 400px">
+  <mat-form-field>
+    <mat-label>Name</mat-label>
+    <input type="text" matInput formControlName="name" placeholder="Name" />
+    <mat-error *ngIf="meteoStationForm.controls.name.hasError('required')">
+      Please enter station name
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Description</mat-label>
+    <input
+      type="text"
+      matInput
+      formControlName="description"
+      placeholder="Station description"
+    />
+    <mat-error
+      *ngIf="meteoStationForm.controls.description.hasError('required')"
+    >
+      Please enter station description
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Image url</mat-label>
+    <input
+      type="text"
+      matInput
+      formControlName="imageUrl"
+      placeholder="Image URL"
+    />
+    <mat-error *ngIf="meteoStationForm.controls.imageUrl.hasError('required')">
+      Please enter imageUrl
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Latitude</mat-label>
+    <input
+      type="number"
+      matInput
+      formControlName="latitude"
+      placeholder="Latitude"
+    />
+    <mat-error *ngIf="meteoStationForm.controls.latitude.hasError('required')">
+      Please enter your latitude
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Longitude</mat-label>
+    <input
+      type="number"
+      matInput
+      formControlName="longitude"
+      placeholder="Longitude"
+    />
+    <mat-error *ngIf="meteoStationForm.controls.longitude.hasError('required')">
+      Please enter your longitude
+    </mat-error>
+  </mat-form-field>
 
-  <h1>Meteo station</h1>
-  <form
-
-    [formGroup]="meteoStationForm"
-    class="flex-column"
-
+  <button
+    *ngIf="data?.id"
+    mat-raised-button
+    (click)="updateStation()"
+    color="primary"
+    [disabled]="loading"
   >
-    <mat-form-field>
-      <mat-label>Name</mat-label>
-      <input
-        type="text"
-        matInput
-        formControlName="name"
-        placeholder="Name"
-      />
-      <mat-error *ngIf="meteoStationForm.controls.name.hasError('required')">
-        Please enter station name
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Description</mat-label>
-      <input
-        type="text"
-        matInput
-        formControlName="description"
-        placeholder="Station description"
-      />
-      <mat-error *ngIf="meteoStationForm.controls.description.hasError('required')">
-        Please enter station description
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Image url</mat-label>
-      <input
-        type="text"
-        matInput
-        formControlName="imageUrl"
-        placeholder="Image URL"
-      />
-      <mat-error *ngIf="meteoStationForm.controls.imageUrl.hasError('required')">
-        Please enter imageUrl
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Latitude</mat-label>
-      <input
-        type="number"
-        matInput
-        formControlName="latitude"
-        placeholder="Latitude"
-      />
-      <mat-error *ngIf="meteoStationForm.controls.latitude.hasError('required')">
-        Please enter your latitude
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Longitude</mat-label>
-      <input
-        type="number"
-        matInput
-        formControlName="longitude"
-        placeholder="Longitude"
-      />
-      <mat-error *ngIf="meteoStationForm.controls.longitude.hasError('required')">
-        Please enter your longitude
-      </mat-error>
-    </mat-form-field>
+    Update meteo station
+  </button>
+  <button
+    *ngIf="!data?.id"
+    mat-raised-button
+    (click)="newStation()"
+    color="primary"
+    [disabled]="loading"
+  >
+    Create new meteo station
+  </button>
+</form>
+<button
+  *ngIf="data?.id"
+  mat-raised-button
+  (click)="onDelete(this.data?.id)"
+  color="primary"
+>
+  <mat-icon>delete</mat-icon>
+</button>
 
-
-    <button
-      *ngIf="data"
-      mat-raised-button
-      (click)="updateStation()"
-      color="primary"
-      [disabled]="loading"
-    >
-      Update meteo station
-    </button>
-    <button
-      *ngIf="!data"
-      mat-raised-button
-      (click)="newStation()"
-      color="primary"
-      [disabled]="loading"
-    >
-      Create new meteo station
-    </button>
-  </form>
-
-  <!--   <div>
+<!--   <div>
     <button mat-raised-button (click)="onSignUp()" color="primary">
       Log in
     </button>
@@ -100,4 +98,3 @@
   </mat-card-header>
   <app-orders-list [orders$]="userOrders$"></app-orders-list>
 </mat-card> -->
-
