--- a/src/app/modules/readings/components/edit-readings/edit-readings.component.html
+++ b/src/app/modules/readings/components/edit-readings/edit-readings.component.html
@@ -47,7 +47,7 @@
         Min: {{ sensor.lowerLimit }}
         / Max: {{sensor.upperLimit}}
         / Description: {{sensor.description}}
-        /  Sensor type: {{ sensor.sensorTypeId | getSensorType: (sensorTypes$ | async)}}
+        /  Sensor type: {{ (sensor.sensorTypeId | getSensorType: (sensorTypes$ | async)).type}}
         / Station {{ sensor.stationId | getStationName: (stations$ | async)}}
       </mat-option>
     </mat-select>
