--- a/src/app/modules/sensors/components/sensors-list/sensors-list.component.html
+++ b/src/app/modules/sensors/components/sensors-list/sensors-list.component.html
@@ -1,18 +1,18 @@
 <table mat-table [dataSource]="dataSource" matSort>
 
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>description</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
     <td mat-cell *matCellDef="let sensor">
       {{ sensor.description}}
     </td>
   </ng-container>
   <ng-container matColumnDef="lowerLimit">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>lowerLimit</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Lower limit</th>
     <td mat-cell *matCellDef="let sensor">{{ sensor.lowerLimit }}</td>
   </ng-container>
 
   <ng-container matColumnDef="upperLimit">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>upperLimit</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Upper limit</th>
     <td mat-cell *matCellDef="let sensor">
       {{ sensor.upperLimit}}
     </td>
@@ -21,27 +21,27 @@
   <ng-container matColumnDef="sensorTypeId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Sensor type</th>
     <td mat-cell *matCellDef="let sensor">
-      {{ sensor.sensorTypeId | getSensorType: (sensorTypes$ | async)}}
+      {{ (sensor.sensorTypeId | getSensorType: (sensorTypes$ | async)).type}}
     </td>
   </ng-container>
-  <ng-container matColumnDef="stationId">
+ <!--  <ng-container *ngIf="!this.stationId" matColumnDef="stationId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Station</th>
     <td mat-cell *matCellDef="let sensor">
       {{ sensor.stationId | getStationName: (stations$ | async)}}
     </td>
-  </ng-container>
+  </ng-container> -->
 
   <ng-container matColumnDef="review">
     <th mat-header-cell *matHeaderCellDef><!-- Review --></th>
-    <td mat-cell *matCellDef="let sensor">
-      <button mat-button color="primary" (click)="viewReadings(sensor)">
+    <td mat-cell *matCellDef="let sensor" style="text-align: end; ">
+      <!-- <button mat-button color="primary" (click)="viewReadings(sensor)">
         <mat-icon>article</mat-icon>
-      </button>
+      </button> -->
       <button mat-button color="primary" (click)="viewSensorDetails(sensor)">
         <mat-icon>edit</mat-icon>
       </button>
       <button mat-button color="warn" (click)="deleteSensor(sensor)">
-        <mat-icon>delete</mat-icon>
+        <mat-icon>delete_outline</mat-icon>
       </button>
     </td>
   </ng-container>
