--- a/src/app/modules/meteo-stations/components/view-station/view-station.component.html
+++ b/src/app/modules/meteo-stations/components/view-station/view-station.component.html
@@ -3,7 +3,7 @@
   class="flex-row flex-center spacer"
 >
   <mat-button-toggle-group [(ngModel)]="viewType">
-    <mat-button-toggle value="view">View</mat-button-toggle>
+    <mat-button-toggle value="view">Overview</mat-button-toggle>
     <mat-button-toggle value="edit">Edit</mat-button-toggle>
     <mat-button-toggle value="sensors">Sensors</mat-button-toggle>
     <mat-button-toggle value="readings">Readings</mat-button-toggle>
