--- a/src/app/modules/welcome/pages/welcome/welcome.component.html
+++ b/src/app/modules/welcome/pages/welcome/welcome.component.html
@@ -15,6 +15,7 @@
   <agm-map
     [latitude]="meteoStations[0].geoLocation.latitude"
     [longitude]="meteoStations[0].geoLocation.longitude"
+    (mapReady)="mapReadyHandler($event)"
     >
   >
     <agm-marker
