--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -35,10 +35,10 @@
       </mat-error>
     </mat-form-field>
     <div class="flex-row" style="width: 100%; margin-top: 50px; justify-content: space-between">
-      <button type="button" mat-raised-button (click)="onCancel()" color="primary" #cancelButton>
+      <button type="button" mat-raised-button (click)="onCancel()" color="primary"  id="cancelBtn">
         Cancel
       </button>
-      <button type="submit" mat-raised-button (click)="onLogIn()" color="primary" [disabled]="logInForm.invalid">
+      <button type="submit" mat-raised-button (click)="onLogIn()" color="primary" [disabled]="logInForm.invalid" id="loginBtn">
         Log in
       </button>
     </div>
