--- a/src/app/modules/readings/components/readings-list/readings-list.component.html
+++ b/src/app/modules/readings/components/readings-list/readings-list.component.html
@@ -3,7 +3,7 @@
   <ng-container matColumnDef="value">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>value</th>
     <td mat-cell *matCellDef="let reading">
-      {{ reading.value}}
+      {{ reading.value | number: "1.2-2"}}
     </td>
   </ng-container>
 
