--- a/src/app/modules/meteo-stations/components/view-station/view-station.component.html
+++ b/src/app/modules/meteo-stations/components/view-station/view-station.component.html
@@ -30,6 +30,7 @@
       <mat-card-content>
         <p>Latitude: {{ data?.geoLocation?.latitude }}</p>
         <p>Longitude: {{ data?.geoLocation?.longitude }}</p>
+        <p>Meteo station id: {{ data?.id }}</p>
       </mat-card-content>
       <!--  <mat-card-content *ngIf="readings$ | async as readings">
         <p *ngFor="let sensor of sensors$ | async">
