--- a/src/app/modules/readings/components/readings-list/readings-list.component.html
+++ b/src/app/modules/readings/components/readings-list/readings-list.component.html
@@ -1,42 +1,22 @@
-
 <table mat-table [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="value">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>value</th>
     <td mat-cell *matCellDef="let reading">
-      {{ reading.value | number: "1.2-2"}}
+      {{ reading.value | number: "1.2-2" }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="timeStamp">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>timeStamp</th>
     <td mat-cell *matCellDef="let reading">
-      {{ reading.timeStamp?.toMillis() | date:'dd/MM/yyyy H:mm:ss' }}
+      {{ reading.timeStamp?.toMillis() | date: "dd/MM/yyyy H:mm:ss" }}
     </td>
   </ng-container>
-
-
 
   <ng-container matColumnDef="sensorId">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>sensorId</th>
     <td mat-cell *matCellDef="let reading">{{ reading.sensorId }}</td>
   </ng-container>
-
-  <!--   <ng-container matColumnDef="firstName">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-  <td mat-cell *matCellDef="let order">{{ order.user.firstName }}</td>
-</ng-container>
-
-<ng-container matColumnDef="lastName">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header>Last name</th>
-  <td mat-cell *matCellDef="let order">{{ order.user.lastName }}</td>
-</ng-container> -->
-
-  <!-- <ng-container matColumnDef="userName">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>User name</th>
-    <td mat-cell *matCellDef="let order">
-      {{ order.user.firstName }} {{ order.user.lastName }}
-    </td>
-  </ng-container>-->
 
   <ng-container matColumnDef="details">
     <th mat-header-cell *matHeaderCellDef>Review</th>
