--- a/src/app/modules/meteo-stations/pages/meteo-stations/meteo-stations.component.html
+++ b/src/app/modules/meteo-stations/pages/meteo-stations/meteo-stations.component.html
@@ -1,11 +1,11 @@
-<!-- <p>meteo-station works!</p>
- --><!-- <ul>
-  <li class="text" *ngFor="let meteoStation of meteoStations | async">
-    {{meteoStation.name}}
-  </li>
-</ul> -->
-<div class="flex-row">
-  <h1>Meteo stations</h1>
+<div class="header">International Education Program Veleri-OI IoT School</div>
+<div class="subheader">Case study of the IoT project "Cov protect System"</div>
+<div class="flex-row" style="margin-bottom:20px">
+  <mat-button-toggle-group [(ngModel)]="route" style="margin-left:20px">
+    <mat-button-toggle id="mapLink" value="map" routerLink="/map"><mat-icon >room</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle id="listLink" value="list"routerLink="/meteo-stations"><mat-icon >list</mat-icon></mat-button-toggle>
+  </mat-button-toggle-group>
   <div style="margin-left: auto">
     <button
       style="margin-right: 20px; margin-top: 5px; margin-bottom: 5px"
@@ -13,70 +13,21 @@
       color="accent"
       mat-mini-fab
       matTooltip="Add new meteo station"
+      id="newBtn"
     >
       <mat-icon>add</mat-icon>
     </button>
   </div>
 </div>
-
-<div style="margin-left: 20px; margin-right: 20px">
-  <mat-accordion>
-    <mat-expansion-panel
-      hideToggle
-      *ngFor="let meteoStation of meteoStations$ | async"
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          {{ meteoStation.name }}
-        </mat-panel-title>
-        <!-- <mat-panel-description>
-
-        </mat-panel-description> -->
-      </mat-expansion-panel-header>
-      <div class="flex-row">
-        <img [src]="meteoStation.imageUrl" style="height: 150px" />
-        <div class="flex-column">
-          <div>
-            Latitude:
-            <span>{{ meteoStation.geoLocation.latitude }} &#176;</span>
-          </div>
-          <div>
-            Longitude:
-            <span>{{ meteoStation.geoLocation.longitude }} &#176;</span>
-          </div>
-          <div>
-            Description: <span>{{ meteoStation.description }}</span>
-          </div>
-        </div>
-        <div>
-          <button
-            mat-raised-button
-            (click)="onEdit(meteoStation)"
-            color="primary"
-          >
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button
-            mat-raised-button
-            (click)="onDelete(meteoStation)"
-            color="primary"
-          >
-            <mat-icon>delete</mat-icon>
-          </button>
-        </div>
-      </div>
-    </mat-expansion-panel>
-    <!--  <mat-expansion-panel (opened)="panelOpenState = true"
-                       (closed)="panelOpenState = false">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Self aware panel
-      </mat-panel-title>
-      <mat-panel-description>
-        Currently I am {{panelOpenState ? 'open' : 'closed'}}
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-    <p>I'm visible because I am open</p>
-  </mat-expansion-panel> -->
-  </mat-accordion>
+<div class="flex-row" style="flex-wrap: wrap;">
+<div class="card" *ngFor="let meteoStation of meteoStations$ | async" style="margin:15px" (click)="onClickStation(meteoStation)">
+  <img [src]="meteoStation.imageUrl" style="width:200px; height:200px " alt="image" >
+  <div class="container">
+    <h3>{{ meteoStation.name }}</h3>
+    <p>{{ meteoStation.description }}</p>
+  </div>
 </div>
+</div>
+
+
+
