--- a/src/app/modules/welcome/pages/welcome/welcome.component.html
+++ b/src/app/modules/welcome/pages/welcome/welcome.component.html
@@ -11,6 +11,7 @@
 </mat-toolbar>
 <div class="header">International Education Program Veleri-OI IoT School</div>
 <div class="subheader">Case study of the IoT project "Cov protect System</div>
+<div style="height:50px"></div>
 <div *ngIf="meteoStations$ | async as meteoStations" class="map-container">
   <agm-map
     [latitude]="meteoStations[0].geoLocation.latitude"
