--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
+  <!-- <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
@@ -7,10 +7,8 @@
     <mat-nav-list>
       <a  mat-list-item routerLink="/map">Map</a>
       <a id="linkToStation" mat-list-item routerLink="/meteo-stations">Stations</a>
-      <a id="linkToSensors" mat-list-item routerLink="/sensors">Sensors</a>
-<!--       <a mat-list-item (click)="logout()">Log out</a>
- -->    </mat-nav-list>
-  </mat-sidenav>
+  </mat-nav-list>
+  </mat-sidenav> -->
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <button
