--- a/src/app/modules/sensors/components/sensor-types-list/sensor-types-list.component.html
+++ b/src/app/modules/sensors/components/sensor-types-list/sensor-types-list.component.html
@@ -1,38 +1,20 @@
-<mat-card style="margin: 20px"
-  ><!-- <mat-form-field class="example-chip-list"> -->
-    <mat-label>Sensor types</mat-label>
-    <!-- <mat-chip-list #chipList >
+<mat-card style="margin: 20px">
+  <mat-label>Sensor types</mat-label>
+  <mat-chip-list>
+    <mat-chip id="newType" color="accent" selected (click)="onNew()"
+      ><mat-icon>add</mat-icon></mat-chip
+    >
+    <ng-container *ngIf="sensorTypes$ | async as sensorTypes">
       <mat-chip
-        *ngFor="let category of sensorTypes$ | async"
+        *ngFor="let sensorType of sensorTypes"
         [selectable]="selectable"
         [removable]="removable"
-        (removed)="remove(category)"
-        (click)="editCategory(category)"
+        (removed)="onRemove(sensorType)"
+        (click)="editSensorType(sensorType)"
       >
-        {{ category.name }}
+        {{ sensorType.type }}
         <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
       </mat-chip>
-      <input
-        placeholder="New sensor type..."
-        [matChipInputFor]="chipList"
-        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-        [matChipInputAddOnBlur]="addOnBlur"
-        (matChipInputTokenEnd)="add($event)"
-      />
-    </mat-chip-list> -->
-    <mat-chip-list>
-      <mat-chip color="accent" selected (click)="onNew()"><mat-icon>add</mat-icon></mat-chip>
-      <mat-chip
-      *ngFor="let sensorType of sensorTypes$ | async"
-      [selectable]="selectable"
-      [removable]="removable"
-      (removed)="onRemove(sensorType)"
-      (click)="editSensorType(sensorType)"
-    >
-      {{ sensorType.type }}
-      <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-    </mat-chip>
-    </mat-chip-list>
-
-  <!-- </mat-form-field> -->
+    </ng-container>
+  </mat-chip-list>
 </mat-card>
