--- a/src/app/modules/sensors/components/sensors-list/sensors-list.component.html
+++ b/src/app/modules/sensors/components/sensors-list/sensors-list.component.html
@@ -1,31 +1,31 @@
-<table mat-table [dataSource]="dataSource" matSort>
+<table mat-table [dataSource]="dataSource" >
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+    <th mat-header-cell *matHeaderCellDef >Description</th>
     <td mat-cell *matCellDef="let sensor">
       {{ sensor.description }}
     </td>
   </ng-container>
   <ng-container matColumnDef="lowerLimit">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Lower limit</th>
+    <th mat-header-cell *matHeaderCellDef >Lower limit</th>
     <td mat-cell *matCellDef="let sensor">{{ sensor.lowerLimit }}</td>
   </ng-container>
 
   <ng-container matColumnDef="upperLimit">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Upper limit</th>
+    <th mat-header-cell *matHeaderCellDef >Upper limit</th>
     <td mat-cell *matCellDef="let sensor">
       {{ sensor.upperLimit }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="sensorTypeId">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Sensor type</th>
+    <th mat-header-cell *matHeaderCellDef >Sensor type</th>
     <td mat-cell *matCellDef="let sensor">
       {{ (sensor?.sensorTypeId | getSensorType: (sensorTypes$ | async))?.type }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Sensor id</th>
+    <th mat-header-cell *matHeaderCellDef >Sensor id</th>
     <td mat-cell *matCellDef="let sensor">
       {{ sensor.id }}
     </td>
