--- a/src/app/modules/readings/components/edit-readings/edit-readings.component.html
+++ b/src/app/modules/readings/components/edit-readings/edit-readings.component.html
@@ -37,7 +37,7 @@
       Please enter description
     </mat-error>
   </mat-form-field> -->
-  <mat-form-field>
+  <!-- <mat-form-field>
     <mat-label>Sensor</mat-label>
     <mat-select formControlName="sensorId">
       <mat-option
@@ -51,7 +51,7 @@
         / Station {{ sensor.stationId | getStationName: (stations$ | async)}}
       </mat-option>
     </mat-select>
-  </mat-form-field>
+  </mat-form-field> -->
   <!-- <mat-form-field>
     <mat-label>Sensor type</mat-label>
     <mat-select formControlName="sensorTypeId">
